# PBL5Hethongnhung

./: README.md
device_firmware/1_blink/: CMakeLists.txt
device_firmware/1_blink/main/: CMakeLists.txt  Kconfig.projbuild  blink.c
device_firmware/2_light_drivers/: CMakeLists.txt
device_firmware/2_light_drivers/main/: Kconfig.projbuild  app_main.c
device_firmware/3_wifi_connection/: CMakeLists.txt
device_firmware/3_wifi_connection/main/: app_main.c  idf_component.yml
device_firmware/4_network_config/: CMakeLists.txt
device_firmware/4_network_config/main/: app_driver.c  app_main.c
device_firmware/5_rainmaker/: CMakeLists.txt  sdkconfig.defaults  test.md
device_firmware/5_rainmaker/main/: CMakeLists.txt  app_driver.c  app_main.c
device_firmware/6_project_optimize/: CMakeLists.txt  sdkconfig.defaults  test.md
device_firmware/6_project_optimize/main/: CMakeLists.txt  app_driver.c  app_main.c  app_pm.c
device_firmware/7_insights/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  test.md
device_firmware/7_insights/main/: app_driver.c  app_main.c
device_firmware/components/app_storage/: CMakeLists.txt  (+3 more)
device_firmware/components/light_driver/: CMakeLists.txt  iot_led.c  light_driver.c
device_firmware/components/light_driver/include/: iot_led.h  light_driver.h
test_case/gatt_server/: CMakeLists.txt  Makefile
test_case/local_control/: CMakeLists.txt  Makefile  partitions.csv
test_case/mqtt_tcp/: CMakeLists.txt  Makefile  mqtt_tcp_example_test.py  test.md
test_case/tcp_socket/: CMakeLists.txt  Makefile  client.py  server.py  test.md
(+35 files in other folders)
